--- a/table1.css
+++ b/table1.css
@@ -2,16 +2,18 @@
     font-size: 18px; font-family: Georgia, 'Times New Roman', Times, serif;
     width: 100%;
     /* background-color: blue; margin: auto; */
+    margin: auto;
+
 }
 table,tr,td{
-    /* border: 2px solid; */
+     border: 1px solid; 
     border-collapse: collapse;
-    padding: 15px;
+    padding: 10px;
     border-bottom: 1px solid gray;
     text-align: center;
 }
 table{
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 caption{
@@ -25,13 +27,9 @@ thead{
     color: aliceblue;
     padding: 10px;
 }
-.icon{
-    color: rgb(16, 202, 16);
+tbody:nth-child(even){
+    background-color:rgb(192, 192, 192);
 }
-.icon1{
-    color: red;
-}
-.gr{background-color: green; border-radius:5px;color: aliceblue; padding: 3px;}
-.rd{background-color: red;border-radius:5px;color: aliceblue; padding: 3px;}    
+tr:hover{background-color: gray;}   
     
 
