--- a/table3.css
+++ b/table3.css
@@ -3,33 +3,42 @@
     width: 100%;
     /* background-color: blue; margin: auto; */
     margin: auto;
+    text-transform: capitalize;
 
 }
-table,tr,td{
+table,tr,td,th{
      border: 1px solid; 
     border-collapse: collapse;
-    padding: 10px;
-    border-bottom: 1px solid gray;
-    text-align: center;
+    padding: 15px;
+    border-bottom: 1px solid ;
+    text-align: left;
 }
 table{
-    width: 90%;
+    width: 80%;
     margin: auto;
+    margin-top: 10px;
 }
 caption{
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     text-transform: capitalize;
+    background-color: rgb(248, 141, 41);
+    width:50% ;
+    margin: auto;
+    border-radius: 15px;
+    margin-top: 20px;
+    padding: 20px 10px;
+    color: aliceblue;
+    border: 1px solid;
 }
-thead{
+th{
     background-color: rgba(22, 22, 221, 0.973);
     color: aliceblue;
     padding: 10px;
+   
 }
-tbody:nth-child(even){
-    background-color:rgb(192, 192, 192);
-}
-tr:hover{background-color: gray;}   
+ td{text-align: center;} 
+   
     
 
